syntax = "proto3";
package HelloWorld;

option go_package = ".;HelloWorld";
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  // Client stream 
  rpc SayHello ( stream HelloRequest) returns (HelloReply) {}
  // Server stream 
  rpc SayHello ( HelloRequest) returns ( stream HelloReply) {}
  // Both stream 
  rpc SayHello ( stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}